--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -458,13 +458,29 @@ all.roles=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 } \
 ORDER BY ?propertyLabel
 
-# constructUniqueSourcesQuery(String namedGraph)
-unique.sources=SELECT DISTINCT ?propertyValue \
+# constructSynonymSourcesQuery(String conceptCode, String namedGraph)
+synonym.sources=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?axiom a owl:Axiom . \
-    { ?axiom :P384 ?propertyValue } \
-    UNION \
-    { ?axiom :P386 ?propertyValue } \
+    { ?axiom #{conceptCode} ?propertyValue } \
+  } \
+} \
+ORDER BY ?propertyValue
+
+# constructTermTypesQuery(String conceptCode, String namedGraph)
+term.types=SELECT DISTINCT ?propertyValue \
+{ GRAPH <#{namedGraph}> \
+  { ?axiom a owl:Axiom . \
+    { ?axiom #{conceptCode} ?propertyValue } \
+  } \
+} \
+ORDER BY ?propertyValue
+
+# constructContributingSourcesQuery(String conceptCode, String namedGraph)
+contributing.sources=SELECT DISTINCT ?propertyValue \
+{ GRAPH <#{namedGraph}> \
+  { ?class a owl:Class . \
+    { ?class #{conceptCode} ?propertyValue } \
   } \
 } \
 ORDER BY ?propertyValue
