batch query methods in sparql manager

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -532,7 +532,7 @@ all.concepts=SELECT ?concept_code ?concept_label \
 } \
 ORDER BY ?concept_code 
 
-all.concepts.batch=SELECT ?concept_code ?concept_label \
+concepts.batch=SELECT ?concept_code ?concept_label \
 { GRAPH <#{namedGraph}> { \
         ?concept a owl:Class . \
         FILTER (?concept_code IN (#{inClause})) . \
@@ -541,7 +541,7 @@ all.concepts.batch=SELECT ?concept_code ?concept_label \
     } \
 }
 
-all.properties.all.concepts=SELECT ?concept_code ?property ?property_code ?property_label ?property_value \
+properties.batch=SELECT ?concept_code ?property ?property_code ?property_label ?property_value \
 { GRAPH <#{namedGraph}> { \
         ?concept a owl:Class . \
         ?concept :NHC0 ?concept_code . \
@@ -554,7 +554,7 @@ all.properties.all.concepts=SELECT ?concept_code ?property ?property_code ?prope
 } \
 ORDER BY ?concept_code ?property_code
 
-all.axioms.all.concepts=SELECT ?concept_code ?axiom ?axiomProperty ?axiomValue \
+axioms.batch=SELECT ?concept_code ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> { \
       ?concept a owl:Class . \
       ?concept :NHC0 ?concept_code . \
@@ -566,7 +566,7 @@ all.axioms.all.concepts=SELECT ?concept_code ?axiom ?axiomProperty ?axiomValue \
 } \
 ORDER BY ?axiom
 
-all.subclasses.all.concepts=SELECT ?concept_code ?subclass ?subclass_label ?subclass_code \
+subconcepts.batch=SELECT ?concept_code ?subclass ?subclass_label ?subclass_code \
 { GRAPH <#{namedGraph}> \
 { \
     { \
@@ -600,7 +600,7 @@ all.subclasses.all.concepts=SELECT ?concept_code ?subclass ?subclass_label ?subc
 } \
 ORDER by ?concept_code ?subclass_label
 
-all.superclasses.all.concepts=SELECT ?concept_code ?superclass ?superclass_label ?superclass_code \
+superconcepts.batch=SELECT ?concept_code ?superclass ?superclass_label ?superclass_code \
 { GRAPH <#{namedGraph}> \
         { \
           { \
@@ -634,7 +634,7 @@ all.superclasses.all.concepts=SELECT ?concept_code ?superclass ?superclass_label
 } \
 ORDER by ?concept_code ?superclass_label
 
-all.associations.all.concepts=SELECT ?concept_code ?relationshipCode ?relationship ?relatedConceptCode ?relatedConceptLabel \
+associations.batch=SELECT ?concept_code ?relationshipCode ?relationship ?relatedConceptCode ?relatedConceptLabel \
 { \
     GRAPH <#{namedGraph}> \
     { \
@@ -654,7 +654,7 @@ all.associations.all.concepts=SELECT ?concept_code ?relationshipCode ?relationsh
 } \
 ORDER BY ?concept_code ?relationship ?relatedConceptLabel
 
-all.inverse.associations.all.concepts=SELECT ?concept_code ?relationshipCode ?relatedConceptLabel ?relatedConceptCode ?relationship \
+inverse.associations.batch=SELECT ?concept_code ?relationshipCode ?relatedConceptLabel ?relatedConceptCode ?relationship \
 { \
     GRAPH <#{namedGraph}> \
     { \
@@ -675,7 +675,7 @@ all.inverse.associations.all.concepts=SELECT ?concept_code ?relationshipCode ?re
 } \
 ORDER BY ?concept_code ?relationship ?relatedConceptLabel
 
-all.disjoint.with.all.concepts=SELECT ?concept_code ?relationship ?relatedConceptCode ?relatedConceptLabel \
+disjoint.with.batch=SELECT ?concept_code ?relationship ?relatedConceptCode ?relatedConceptLabel \
 { \
     GRAPH <#{namedGraph}> \
     { \
@@ -690,7 +690,7 @@ all.disjoint.with.all.concepts=SELECT ?concept_code ?relationship ?relatedConcep
 } \
 ORDER BY ?concept_code ?relatedConceptLabel
 
-all.roles.all.concepts=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
+roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
 { \
     graph <#{namedGraph}> \
     { \
@@ -768,7 +768,7 @@ all.roles.all.concepts=SELECT distinct ?concept_code ?relationship ?relationship
 } \
 ORDER BY ?concept_code ?relationship ?relatedConceptLabel
 
-all.inverse.roles.all.concepts=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
+inverse.roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
 { \
     GRAPH <#{namedGraph}> \
     { \
