--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -523,42 +523,42 @@ PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
 
 # batch queries
 
-all.concepts=SELECT ?concept_code ?concept_label \
+all.concepts=SELECT ?conceptCode ?conceptLabel \
 { GRAPH <#{namedGraph}> { \
         ?concept a owl:Class . \
-        ?concept rdfs:label ?concept_label . \
-        ?concept :NHC0 ?concept_code \
+        ?concept rdfs:label ?conceptLabel . \
+        ?concept :NHC0 ?conceptCode \
     } \
 } \
-ORDER BY ?concept_code 
+ORDER BY ?conceptCode 
 
-concepts.batch=SELECT ?concept_code ?concept_label \
+concepts.batch=SELECT ?conceptCode ?conceptLabel \
 { GRAPH <#{namedGraph}> { \
         ?concept a owl:Class . \
-        FILTER (?concept_code IN (#{inClause})) . \
-        ?concept rdfs:label ?concept_label . \
-        ?concept :NHC0 ?concept_code \
+        FILTER (?conceptCode IN (#{inClause})) . \
+        ?concept rdfs:label ?conceptLabel . \
+        ?concept :NHC0 ?conceptCode \
     } \
 }
 
-properties.batch=SELECT ?concept_code ?property ?property_code ?property_label ?property_value \
+properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> { \
         ?concept a owl:Class . \
-        ?concept :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
-        ?concept ?property ?property_value . \
+        ?concept :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
+        ?concept ?property ?propertyValue . \
         ?property a owl:AnnotationProperty . \
-        ?property rdfs:label ?property_label . \
-        OPTIONAL { ?property :NHC0 ?property_code } \
+        ?property rdfs:label ?propertyLabel . \
+        OPTIONAL { ?property :NHC0 ?propertyCode } \
     } \
 } \
-ORDER BY ?concept_code ?property_code
+ORDER BY ?conceptCode ?propertyCode
 
-axioms.batch=SELECT ?concept_code ?axiom ?axiomProperty ?axiomValue \
+axioms.batch=SELECT ?conceptCode ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> { \
       ?concept a owl:Class . \
-      ?concept :NHC0 ?concept_code . \
-      FILTER (?concept_code IN (#{inClause})) . \
+      ?concept :NHC0 ?conceptCode . \
+      FILTER (?conceptCode IN (#{inClause})) . \
       ?axiom a owl:Axiom . \
       ?axiom owl:annotatedSource ?concept . \
       ?axiom ?axiomProperty ?axiomValue \
@@ -566,18 +566,18 @@ axioms.batch=SELECT ?concept_code ?axiom ?axiomProperty ?axiomValue \
 } \
 ORDER BY ?axiom
 
-subconcepts.batch=SELECT ?concept_code ?subclass ?subclass_label ?subclass_code \
+subconcepts.batch=SELECT ?conceptCode ?subclass ?subclassLabel ?subclassCode \
 { GRAPH <#{namedGraph}> \
 { \
     { \
         { \
             ?superclass a owl:Class . \
-            ?superclass :NHC0 ?concept_code  . \
-            FILTER (?concept_code IN (#{inClause})) . \
+            ?superclass :NHC0 ?conceptCode  . \
+            FILTER (?conceptCode IN (#{inClause})) . \
             ?subclass rdfs:subClassOf ?superclass . \
             ?subclass a owl:Class . \
-            ?subclass rdfs:label ?subclass_label . \
-            ?subclass :NHC0 ?subclass_code \
+            ?subclass rdfs:label ?subclassLabel . \
+            ?subclass :NHC0 ?subclassCode \
         } \
         FILTER (?superclass != ?subclass) \
     } \
@@ -585,33 +585,33 @@ subconcepts.batch=SELECT ?concept_code ?subclass ?subclass_label ?subclass_code 
     { \
         { \
             ?superclass a owl:Class . \
-            ?superclass :NHC0 ?concept_code . \
-            FILTER (?concept_code IN (#{inClause})) . \
+            ?superclass :NHC0 ?conceptCode . \
+            FILTER (?conceptCode IN (#{inClause})) . \
             ?equiv_concept owl:intersectionOf ?list . \
             ?list rdf:rest*/rdf:first ?superclass . \
             ?subclass owl:equivalentClass ?equiv_concept . \
             ?subclass a owl:Class . \
-            ?subclass rdfs:label ?subclass_label . \
-            ?subclass :NHC0 ?subclass_code \
+            ?subclass rdfs:label ?subclassLabel . \
+            ?subclass :NHC0 ?subclassCode \
         } \
         FILTER (?superclass != ?subclass) \
     } \
 } \
 } \
-ORDER by ?concept_code ?subclass_label
+ORDER by ?conceptCode ?subclassLabel
 
-superconcepts.batch=SELECT ?concept_code ?superclass ?superclass_label ?superclass_code \
+superconcepts.batch=SELECT ?conceptCode ?superclass ?superclassLabel ?superclassCode \
 { GRAPH <#{namedGraph}> \
         { \
           { \
             { \
               ?subclass a owl:Class . \
-              ?subclass :NHC0 ?concept_code . \
-              FILTER (?concept_code IN (#{inClause})) . \
+              ?subclass :NHC0 ?conceptCode . \
+              FILTER (?conceptCode IN (#{inClause})) . \
               ?subclass rdfs:subClassOf ?superclass . \
               ?superclass a owl:Class . \
-              ?superclass rdfs:label ?superclass_label . \
-              ?superclass :NHC0 ?superclass_code \
+              ?superclass rdfs:label ?superclassLabel . \
+              ?superclass :NHC0 ?superclassCode \
             } \
             FILTER (?subclass != ?superclass) \
           } \
@@ -619,28 +619,28 @@ superconcepts.batch=SELECT ?concept_code ?superclass ?superclass_label ?supercla
           { \
             { \
               ?subclass a owl:Class . \
-              ?subclass :NHC0 ?concept_code . \
-              FILTER (?concept_code IN (#{inClause})) . \
+              ?subclass :NHC0 ?conceptCode . \
+              FILTER (?conceptCode IN (#{inClause})) . \
               ?equiv_concept owl:intersectionOf ?list . \
               ?list rdf:rest*/rdf:first ?superclass . \
               ?subclass owl:equivalentClass ?equiv_concept . \
               ?superclass a owl:Class . \
-              ?superclass rdfs:label ?superclass_label . \
-              ?superclass :NHC0 ?superclass_code \
+              ?superclass rdfs:label ?superclassLabel . \
+              ?superclass :NHC0 ?superclassCode \
             } \
             FILTER (?subclass != ?superclass) \
           } \
         } \
 } \
-ORDER by ?concept_code ?superclass_label
+ORDER by ?conceptCode ?superclassLabel
 
-associations.batch=SELECT ?concept_code ?relationshipCode ?relationship ?relatedConceptCode ?relatedConceptLabel \
+associations.batch=SELECT ?conceptCode ?relationshipCode ?relationship ?relatedConceptCode ?relatedConceptLabel \
 { \
     GRAPH <#{namedGraph}> \
     { \
         ?x a owl:Class . \
-        ?x :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?x :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?y a owl:AnnotationProperty . \
         ?x ?y ?z . \
         ?z a owl:Class . \
@@ -652,16 +652,16 @@ associations.batch=SELECT ?concept_code ?relationshipCode ?relationship ?related
     } \
     FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
 } \
-ORDER BY ?concept_code ?relationship ?relatedConceptLabel
+ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
-inverse.associations.batch=SELECT ?concept_code ?relationshipCode ?relatedConceptLabel ?relatedConceptCode ?relationship \
+inverse.associations.batch=SELECT ?conceptCode ?relationshipCode ?relatedConceptLabel ?relatedConceptCode ?relationship \
 { \
     GRAPH <#{namedGraph}> \
     { \
         ?z a owl:Class . \
         ?z rdfs:label ?z_label . \
-        ?z :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?z :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?x a owl:Class . \
         ?x rdfs:label ?relatedConceptLabel . \
         ?x :NHC0 ?relatedConceptCode . \
@@ -673,31 +673,31 @@ inverse.associations.batch=SELECT ?concept_code ?relationshipCode ?relatedConcep
     } \
     FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
 } \
-ORDER BY ?concept_code ?relationship ?relatedConceptLabel
+ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
-disjoint.with.batch=SELECT ?concept_code ?relationship ?relatedConceptCode ?relatedConceptLabel \
+disjoint.with.batch=SELECT ?conceptCode ?relationship ?relatedConceptCode ?relatedConceptLabel \
 { \
     GRAPH <#{namedGraph}> \
     { \
         ?x a owl:Class . \
-        ?x :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?x :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?x owl:disjointWith ?concept . \
         ?concept :NHC0 ?relatedConceptCode . \
         ?concept rdfs:label ?relatedConceptLabel \
         BIND ("disjointWith" as ?relationship) \
     } \
 } \
-ORDER BY ?concept_code ?relatedConceptLabel
+ORDER BY ?conceptCode ?relatedConceptLabel
 
-roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
+roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
 { \
     graph <#{namedGraph}> \
     { \
       { \
         ?x a owl:Class . \
-        ?x :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?x :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?x rdfs:label ?x_label . \
         ?x rdfs:subClassOf ?z0 . \
         ?z0 a owl:Class . \
@@ -714,8 +714,8 @@ roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relat
       UNION \
       { \
         ?x a owl:Class . \
-        ?x :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?x :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?x rdfs:subClassOf ?r . \
         ?r a owl:Restriction . \
         ?r owl:onProperty ?p . \
@@ -729,8 +729,8 @@ roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relat
       UNION \
       { \
         ?x a owl:Class . \
-        ?x :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?x :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?x owl:equivalentClass ?z . \
         ?z a owl:Class . \
         ?z owl:intersectionOf ?list . \
@@ -746,8 +746,8 @@ roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relat
       UNION \
       { \
         ?x a owl:Class . \
-        ?x :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?x :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?x owl:equivalentClass ?z1 . \
         ?z1 a owl:Class . \
         ?z1 owl:intersectionOf ?list1 . \
@@ -766,9 +766,9 @@ roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relat
       } \
    } \
 } \
-ORDER BY ?concept_code ?relationship ?relatedConceptLabel
+ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
-inverse.roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
+inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
 { \
     GRAPH <#{namedGraph}> \
     { \
@@ -785,8 +785,8 @@ inverse.roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCod
         ?p rdfs:label ?relationship . \
         ?p :NHC0 ?relationshipCode . \
         ?z2 owl:someValuesFrom ?y . \
-        ?y :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) . \
+        ?y :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) . \
         ?y rdfs:label ?y_label \
       } \
       UNION \
@@ -801,8 +801,8 @@ inverse.roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCod
         ?p :NHC0 ?relationshipCode . \
         ?r owl:someValuesFrom ?y . \
         ?y a owl:Class . \
-        ?y :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) \
+        ?y :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) \
       } \
       UNION \
       { \
@@ -819,8 +819,8 @@ inverse.roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCod
         ?p :NHC0 ?relationshipCode . \
         ?z2 owl:someValuesFrom ?y . \
         ?y a owl:Class . \
-        ?y :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) \
+        ?y :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) \
       } \
       UNION \
       { \
@@ -841,9 +841,9 @@ inverse.roles.batch=SELECT distinct ?concept_code ?relationship ?relationshipCod
         ?p :NHC0 ?relationshipCode . \
         ?z4 owl:someValuesFrom ?y . \
         ?y a owl:Class . \
-        ?y :NHC0 ?concept_code . \
-        FILTER (?concept_code IN (#{inClause})) \
+        ?y :NHC0 ?conceptCode . \
+        FILTER (?conceptCode IN (#{inClause})) \
       } \
    } \
 } \
-ORDER BY ?concept_code ?relationship ?relatedConceptLabel
+ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
