--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -52,6 +52,11 @@ nci:
       generatedFilePath: ${user.home}/apps/evsrestapi/data/
       forceFileGeneration: false
       metricLogDirectory: ${user.home}/apps/evsrestapi/logs/
+    bulkload:
+      conceptsDir: ${NCI_EVS_BULK_LOAD_CONCEPTS_DIR:/tmp/}
+      lockFile: ${NCI_EVS_BULK_LOAD_LOCK_FILE_NAME:DownloadSuccessfull.lck}
+      downloadBatchSize: ${NCI_EVS_BULK_LOAD_DOWNLOAD_BATCH_SIZE:1000}
+      indexBatchSize: ${NCI_EVS_BULK_LOAD_INDEX_BATCH_SIZE:1000}
     stardog:
       host: ${STARDOG_HOST:localhost}
       port: ${STARDOG_PORT:5820}
