--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,8 +82,9 @@ nci:
     elasticsearch:
       server:
         host: ${ES_HOST:localhost}
-        port: ${ES_PORT:9200}
-        url: ${EVS_ELASTIC_SEARCH_SERVER_URL:http://${nci.evs.elasticsearch.server.host}:${nci.evs.elasticsearch.server.port}/concept_flat_full_nested_bylabel/concept/_search}
+        port: ${ES_PORT:9300}
+        clusterName: ${ES_CLUSTER_NAME:docker-cluster}
+        url: ${EVS_ELASTIC_SEARCH_SERVER_URL:http://${nci.evs.elasticsearch.server.host}:9200/concept_flat_full_nested_bylabel/concept/_search}
       query:
         propertyToQuery: {
                    p108:
