Incorporate updated hierarchy query, revamped concept status computation, added qualifiers to model where they belong, cleaned up a little of ThesaurusProperties

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -32,7 +32,7 @@ version.info=SELECT ?version ?date ?comment { GRAPH <#{namedGraph}> { \
 axiom.qualifier=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?axiom a owl:Axiom . \
-    ?axiom :#{propertyCode}?propertyValue \
+    ?axiom :#{propertyCode} ?propertyValue \
   } \
 } \
 ORDER BY ?propertyValue
@@ -364,6 +364,9 @@ disjoint.with=SELECT ?relatedConceptLabel ?relatedConceptCode ?relationship \
 ORDER BY ?relatedConceptLabel
 
 # constructHierarchyQuery(String namedGraph)
+# (1) owl:Class|rdfs:subClassOf|owl:Class
+# (2) owl:Class|owl:equivalentClass|owl:Class|owl:intersectionOf|owl:Class
+# (3) owl:Class|rdfs:subClassOf|owl:Class|owl:intersectionOf|owl:Class
 hierarchy=SELECT ?parentCode ?parentLabel ?childCode ?childLabel \
     { \
     GRAPH <#{namedGraph}> \
@@ -378,7 +381,6 @@ hierarchy=SELECT ?parentCode ?parentLabel ?childCode ?childLabel \
             ?parent rdfs:label ?parentLabel . \
             ?parent :NHC0 ?parentCode \
           } \
-          FILTER (?child != ?parent) \
         } \
         UNION \
         { \
@@ -394,7 +396,21 @@ hierarchy=SELECT ?parentCode ?parentLabel ?childCode ?childLabel \
             ?parent rdfs:label ?parentLabel . \
             ?parent :NHC0 ?parentCode \
           } \
-          FILTER (?child != ?parent) \
+        } \
+        UNION \
+        { \
+          { \
+            ?child a owl:Class . \
+            ?child rdfs:label ?childLabel . \
+            ?child :NHC0 ?childCode . \
+            ?child rdfs:subClassOf ?y . \
+            ?y a owl:Class . \
+            ?y owl:intersectionOf ?list . \
+            ?list rdf:rest*/rdf:first ?parent . \
+            ?parent a owl:Class . \
+            ?parent rdfs:label ?parentLabel . \
+            ?parent :NHC0 ?parentCode \
+          } \
         } \
       } \
     }
@@ -407,6 +423,15 @@ all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
     ?property :NHC0 ?propertyCode . \
     ?property :P108 ?propertyValue . \
     filter not exists { ?property rdfs:range xml:anyURI } \
+  } \
+} \
+ORDER BY ?propertyLabel
+
+# distinct property values (String properytCode, String namedGraph)
+distinct.property.values=SELECT DISTINCT ?propertyValue \
+{ GRAPH <#{namedGraph}> \
+  { ?c a owl:Class . \
+    ?c :#{propertyCode} ?propertyValue \
   } \
 } \
 ORDER BY ?propertyLabel
