impl for load via command line; query updates

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -34,7 +34,7 @@ logging:
     level:
         org.springframework: WARN
         gov.nih.nci.evs.api: INFO
-        org.springframework.data.elasticsearch.core: DEBUG
+        org.springframework.data.elasticsearch.core: INFO
 
 #
 # Server Properties
