EVSRESTAPI-57: add definitionSources endpoint

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -483,29 +483,20 @@ all.roles=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 } \
 ORDER BY ?propertyLabel
 
-# constructSynonymSourcesQuery(String conceptCode, String namedGraph)
-synonym.sources=SELECT DISTINCT ?propertyValue \
+# find all property values used for the specified axiom qualifier
+axiom.qualifier.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?axiom a owl:Axiom . \
-    { ?axiom #{conceptCode} ?propertyValue } \
-  } \
-} \
-ORDER BY ?propertyValue
-
-# constructTermTypesQuery(String conceptCode, String namedGraph)
-term.types=SELECT DISTINCT ?propertyValue \
-{ GRAPH <#{namedGraph}> \
-  { ?axiom a owl:Axiom . \
-    { ?axiom #{conceptCode} ?propertyValue } \
+    { ?axiom :#{conceptCode} ?propertyValue } \
   } \
 } \
 ORDER BY ?propertyValue
 
 # constructContributingSourcesQuery(String conceptCode, String namedGraph)
-contributing.sources=SELECT DISTINCT ?propertyValue \
+concept.property.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?class a owl:Class . \
-    { ?class #{conceptCode} ?propertyValue } \
+    { ?class :#{conceptCode} ?propertyValue } \
   } \
 } \
 ORDER BY ?propertyValue
