EVSRESTAPI-100: implement changes to remove contributingSource from API and tests

--- a/src/main/resources/application-thesaurus.yml
+++ b/src/main/resources/application-thesaurus.yml
@@ -166,28 +166,38 @@ thesaurus:
                        P98: 'DesignNote'
                        }                          
 
-        contributingSources: {
+        sources: {
                             ACC: 'American College of Cardiology',
-                            BioCarta: 'BioCarta online maps of molecular pathways, adapted for NCI use',
+                            "[ACC/AHA]": 'American College of Cardiology / American Heart Association', 
+                            BIOCARTA: 'BioCarta online maps of molecular pathways, adapted for NCI use',
                             BRIDG: 'Biomedical Research Integrated Domain Model Group',
+                            CADSR: 'Cancer Data Standards Registry and Repository',
                             CareLex: 'CareLex electronic Trial Master File Terminology',
+                            CBDD: 'Chemical Biology and Drug Development',
                             CDC: 'U.S. Centers for Disease Control and Prevention',
                             CDISC: 'Clinical Data Interchange Standards Consortium',
                             CDISC-GLOSS: 'CDISC Glossary Terminology',
+                            Cellosaurus: 'Cellosaurus - a knowledge resource on cell lines',
+                            CPTAC: 'Clinical Proteomic Tumor Analysis Consortium',
                             COH: 'City of Hope',
                             CRCH: 'Cancer Research Center of Hawaii Nutrition Terminology',
                             CTCAE: 'Common Terminology Criteria for Adverse Events',
                             CTEP: 'Cancer Therapy Evaluation Program',
+                            CTRM: 'Consortium on Translational Research in the Microbiome',
                             CTRP: 'Clinical Trials Reporting Program',
                             DCP: 'NCI Division of Cancer Prevention Program',
                             DICOM: 'Digital Imaging Communications in Medicine',
                             DTP: 'NCI Developmental Therapeutics Program',
-                            EDQM: 'European Directorate for the Quality of Medicines & Healthcare',
+                            EDQM-HC: 'European Directorate for the Quality of Medicines & Healthcare',
                             FDA: 'U.S. Food and Drug Administration',
                             GAIA: 'Global Alignment of Immunization safety Assessment in pregnancy Terminology',
+                            GDC: 'Genomic Data Commons',
                             GENC: 'Geopolitical Entities, Names, and Codes Terminology',
                             HGNC: 'HUGO Gene Nomenclature Committee',
+                            HL7: 'Health Level Seven International',
+                            ICDC: 'International Cancer Genome Consortium',
                             ICH: 'International Conference on Harmonization',
+                            INC: 'International Neonatal Consortium',
                             IMDRF: 'International Medical Device Regulators Forum',
                             JAX: 'Jackson Laboratories Mouse Terminology, adapted for NCI use',
                             KEGG: 'KEGG Pathway Database',
@@ -196,14 +206,18 @@ thesaurus:
                             NCCN: 'National Comprehensive Cancer Network',
                             NCI: 'National Cancer Institute Thesaurus',
                             NCI-GLOSS: 'NCI Dictionary of Cancer Terms',
+                            NCICB: 'NCI Center for Bioinformatics',
                             NCI-HL7: 'NCI Health Level 7',
                             NCPDP: 'National Council for Prescription Drug Programs',
+                            NDC: 'National Drug Code',
                             NICHD: 'National Institute of Child Health and Human Development',
                             PI-RADS: 'Prostate Imaging-Reporting and Data System',
                             PID: 'NCI Nature Pathway Interaction Database',
                             RENI: 'Registry Nomenclature Information System',
+                            SEER: 'Surveillance, Epidemiology, and End Results Program',
                             UCUM: 'Unified Code for Units of Measure',
-                            Zebrafish: 'Zebrafish Model Organism Database'        
+                            Zebrafish: 'Zebrafish Model Organism Database',
+                            'ZFin': 'Zebrafish Information Network'        
                          }
         termTypes: {
                             AB: 'Abbreviation',
