--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -492,7 +492,7 @@ axiom.qualifier.values=SELECT DISTINCT ?propertyValue \
 } \
 ORDER BY ?propertyValue
 
-# constructContributingSourcesQuery(String conceptCode, String namedGraph)
+# concept property values
 concept.property.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?class a owl:Class . \
