--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     compile 'org.apache.commons:commons-text:1.8'
     compile 'javax.cache:cache-api:1.1.1'
     compile 'org.ehcache:ehcache:3.8.1'
+    compile 'org.springframework.data:spring-data-elasticsearch:3.2.0.RELEASE'
+    compile 'commons-cli:commons-cli:1.4'
 
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
@@ -123,7 +125,13 @@ task zipFile(type: Zip) {
     }
 }
 
-zipFile.dependsOn = [ bootWar ]
-build.dependsOn = [ test, bootWar, zipFile ]
-install.dependsOn = [ bootWar, zipFile ]
+bootJar {
+    manifest {
+    	attributes 'Start-Class': 'gov.nih.nci.evs.api.service.ElasticLoadServiceImpl'
+    }
+}
+
+zipFile.dependsOn = [ bootWar, bootJar ]
+build.dependsOn = [ test, bootWar, bootJar, zipFile ]
+install.dependsOn = [ bootWar, bootJar, zipFile ]
 
