distinct property query fix

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -431,7 +431,7 @@ ORDER BY ?propertyLabel
 distinct.property.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?c a owl:Class . \
-    ?c #{propertyCode} ?propertyValue \
+    ?c :#{propertyCode} ?propertyValue \
   } \
 } \
 ORDER BY ?propertyLabel
