--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,7 +62,7 @@ nci:
       contextPath: ${NCI_EVS_API_PATH:/api/v1}
       generatedFilePath: ${NCI_EVS_API_GENERATED_FILE_PATH:${user.home}/apps/evsrestapi/data/}
       forceFileGeneration: ${NCI_EVS_API_FORCE_FILE_GENERATION:false}
-      metricLogDirectory:  ${NCI_EVS_API_METRIC_LOG_PATH:${user.home}/apps/evsrestapi/logs/}
+      metricsEnabled:   ${METRICS_ENABLED:false}
     stardog:
       queryUrl: ${STARDOG_MONTHLY_QUERY_URL:http://localhost:5820/NCIT2/query}
       username: ${STARDOG_USERNAME:REPLACE_WITH_USERNAME}
