--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ apply plugin: 'maven-publish'
 
 /* Version info */
 group = "gov.nih.nci.evs.api"
-version = "1.1.1.RELEASE"
+version = "1.2.0.RELEASE"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -126,6 +126,7 @@ task zipFile(type: Zip) {
     }
 }
 
+// NOTE: this causes ElasticLoadServiceImpl to launch when run via -jar
 bootJar {
     manifest {
     	attributes 'Start-Class': 'gov.nih.nci.evs.api.service.ElasticLoadServiceImpl'
