--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -67,13 +67,12 @@ nci:
       readTimeout: 30000
       connectTimeout: 30000
       populateCacheCron: 0 0 1 * * *
-      forcePopulateCache: Y
+      forcePopulateCache: N
     elasticsearch:
       server:
         host: ${ES_HOST:localhost}
         port: ${ES_PORT:9300}
         clusterName: ${ES_CLUSTER_NAME:docker-cluster}
-        url: http://localhost:9200/metrics/_doc
 
 swagger:
    documentation:
