--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,8 +61,6 @@ nci:
   evs:
     application:
       contextPath: ${NCI_EVS_API_PATH:/api/v1}
-      generatedFilePath: ${NCI_EVS_API_GENERATED_FILE_PATH:${user.home}/apps/evsrestapi/data/}
-      forceFileGeneration: ${NCI_EVS_API_FORCE_FILE_GENERATION:false}
       metricsEnabled:   ${METRICS_ENABLED:false}
     bulkload:
       conceptsDir: ${NCI_EVS_BULK_LOAD_CONCEPTS_DIR:/tmp/}
@@ -72,21 +70,15 @@ nci:
     stardog:
       host: ${STARDOG_HOST:localhost}
       port: ${STARDOG_PORT:5820}
-      queryUrl: ${STARDOG_MONTHLY_QUERY_URL:http://${nci.evs.stardog.host}:${nci.evs.stardog.port}/NCIT2/query}
+      db: ${STARDOG_DB:NCIT2}
+      queryUrl: ${STARDOG_MONTHLY_QUERY_URL:http://${nci.evs.stardog.host}:${nci.evs.stardog.port}/${nci.evs.stardog.db}/query}
       username: ${STARDOG_USERNAME:REPLACE_WITH_USERNAME}
       password: ${STARDOG_PASSWORD:REPLACE_WITH_PASSWORD}
-      readTimeout: ${STARDOG_READ_TIMEOUT:30}
-      connectTimeout: ${STARDOG_CONNECT_TIMEOUT:30}
-      populateCacheCron: ${POPULATE_CACHE_CRON:0 0 1 * * *}
-      forcePopulateCache: ${FORCE_POPULATE_CACHE:Y}
-      waitPopulateCache: ${WAIT_POPULATE_CACHE:N}
+      readTimeout: ${STARDOG_READ_TIMEOUT:60}
+      connectTimeout: ${STARDOG_CONNECT_TIMEOUT:60}
     elasticsearch:
       server:
         host: ${ES_HOST:localhost}
         port: ${ES_PORT:9300}
         clusterName: ${ES_CLUSTER_NAME:docker-cluster}
 
-swagger:
-   documentation:
-       hostURL:  ${HOST_URL:http://localhost:8082}
-       searchAPIOperation: Searches for the term or phrase using the Elastic Search mechanism
