--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,11 @@ bin/
 __pycache__
 /build/
 WEB-INF/*
-.vscode/
-/.idea/
+.idea/compiler.xml
+.idea/gradle.xml
+.idea/jarRepositories.xml
+.idea/misc.xml
+.idea/vcs.xml
+.vscode/launch.json
+.vscode/settings.json
+.idea/.gitignore
