API end point to clear cache

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -50,6 +50,7 @@ server:
 nci:
   evs:
     application:
+      adminKey: ${NCI_EVS_ADMIN_KEY:Default}
       contextPath: /api/v1
       metricsEnabled:   ${METRICS_ENABLED:false}
     bulkload:
