Leverage terminology  metadata loaded from a JSON file

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,8 +7,9 @@ spring:
     #
     application:
         name: nci-evs-api
-    profiles:
-      include: thesaurus
+    #profiles:
+    #  include: metadata
+
     #
     # JSON Formatting Properties
     #
