--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
     #
     application:
         name: nci-evs-api
-    profiles:
-      include: thesaurus
+    #profiles:
+    #  include: metadata
 
     #
     # JSON Formatting Properties
