Revert "EVSRESTAPI-101: bring terminology metadata online (#48)"
This reverts commit 04774593729499b6b4e630deb2b2031a190be131.

--- a/build.gradle
+++ b/build.gradle
@@ -126,10 +126,10 @@ task zipFile(type: Zip) {
     }
 }
 
-// NOTE: this causes LoaderServiceImpl to launch when run via -jar
+// NOTE: this causes ElasticLoadServiceImpl to launch when run via -jar
 bootJar {
     manifest {
-    	attributes 'Start-Class': 'gov.nih.nci.evs.api.service.LoaderServiceImpl'
+    	attributes 'Start-Class': 'gov.nih.nci.evs.api.service.ElasticLoadServiceImpl'
     }
 }
 
