--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
     #
     application:
         name: nci-evs-api
-    #profiles:
-    #  include: metadata
+    profiles:
+      include: thesaurus
 
     #
     # JSON Formatting Properties
