--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -34,7 +34,7 @@ info:
 logging:
     level:
         org.springframework: WARN
-        gov.nih.nci.evs.api: INFO
+        gov.nih.nci.evs.api: DEBUG
         org.springframework.data.elasticsearch.core: DEBUG
         gov.nih.nci.evs.api.configuration.EVSElasticsearchRestTemplate: DEBUG
         org.apache.http: INFO # change to DEBUG when needed but INFO for now to avoid logspam
