--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
 	}
     repositories {
         jcenter()
-        maven { url "http://repo.spring.io/release" }
-        maven { url "http://repo.spring.io/milestone" }
-        maven { url "http://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/release" }
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url "https://repo.spring.io/snapshot" }
         mavenCentral()
     }
 
@@ -18,9 +18,9 @@ buildscript {
 repositories {
     mavenLocal()
     jcenter()
-    maven { url "http://repo.spring.io/release" }
-    maven { url "http://repo.spring.io/milestone" }
-    maven { url "http://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/release" }
+    maven { url "https://repo.spring.io/milestone" }
+    maven { url "https://repo.spring.io/snapshot" }
     mavenCentral()
 }
 
