--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile 'org.springframework.data:spring-data-elasticsearch:3.2.0.RELEASE'
     compile 'commons-cli:commons-cli:1.4'
     compile 'cglib:cglib:2.2.2'
+    compile 'com.maxmind.geoip2:geoip2:2.15.0'
 
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
