EVSRESTAPI-166: restore some caching needed for indexing

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -43,7 +43,7 @@ logging:
 # Server Properties
 #
 server:
-    port: 8082
+    port: ${EVS_SERVER_PORT:8082}
     servlet:
        context-path: /
        session:
