--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -54,7 +54,8 @@ nci:
     application:
       adminKey: ${NCI_EVS_ADMIN_KEY:Default}
       contextPath: /api/v1
-      metricsEnabled:   ${METRICS_ENABLED:false}
+      metricsEnabled:   ${METRICS_ENABLED:true}
+      metricsDir: ${METRICS_DIR:/tmp}
     bulkload:
       conceptsDir: ${NCI_EVS_BULK_LOAD_CONCEPTS_DIR:/tmp/}
       lockFile: ${NCI_EVS_BULK_LOAD_LOCK_FILE_NAME:DownloadSuccessfull.lck}
