--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,6 +64,7 @@ nci:
       adminKey: ${NCI_EVS_ADMIN_KEY:Default}
       contextPath: ${NCI_EVS_API_PATH:/api/v1}
       metricsEnabled:   ${METRICS_ENABLED:false}
+      metricsDir: ${METRICS_DIR}
     bulkload:
       conceptsDir: ${NCI_EVS_BULK_LOAD_CONCEPTS_DIR:/tmp/}
       lockFile: ${NCI_EVS_BULK_LOAD_LOCK_FILE_NAME:DownloadSuccessfull.lck}
