--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1302,3 +1302,21 @@ inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode
     } \
 } \
 ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+
+associationEntries=SELECT ?conceptCode ?conceptLabel ?relatedConceptCode ?relatedConceptLabel \
+{ \
+    GRAPH <#{namedGraph}> \
+    { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?conceptCode . \
+        ?x rdfs:label ?conceptLabel . \
+        ?y a owl:AnnotationProperty . \
+        ?x ?y ?z . \
+        ?z a owl:Class . \
+        ?z rdfs:label ?relatedConceptLabel . \
+        ?z :NHC0 ?relatedConceptCode . \
+        ?y :NHC0 "#{conceptCode}" . \
+        ?y rdfs:range ?y_range \
+    } \
+    FILTER (str(?y_range)=\"http://www.w3.org/2001/XMLSchema#anyURI\") \
+}
