Integration of feature with NCIt indexing process

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -155,7 +155,7 @@ superconcept=SELECT ?superclass ?superclassLabel ?superclassCode \
 } \
 ORDER by ?superclassLabel
 
-subset=SELECT ?conceptLabel ?conceptCode
+subset=SELECT ?conceptLabel ?conceptCode \
 { \
     GRAPH <#{namedGraph}> \
     { \
