EVSRESTAPI-169: extensions computations during indexing (#71)
* EVSRESTAPI-170: add extensions object and include param support

* Start bringing over main heirarchy and supporting code

* Rewriting of main type hierarchy to keep just what we need

* Finish initial rewrite of main menu hierarchy stuff

* Integration of feature with NCIt indexing process

* Get main menu ancestors workign properly

* Only check lowercase names

* Generate QA cases

* Tweaks to main menu ancestors

* Made more progress

* Another round of trying to get main menu ancestors right

* Fix extraneous main menu ancestors to C2991

* Add logging to see what's going on with null concept name case

* Cut down on log size so we can see it properly in Jenkins

* Fix main menu ancestors for main type and broad category concepts

* Add test cases for broad category and extension concepts

* Fixes to handle mainttype set comparisons and particularly concepts that are not diseases

* More fiddling to try to get this working

* Refine the algorithm some more

* Fix logic around main type disease concepts

* Comment QA CASE stuff out for now

* Add handling for CTRP disease finding not having a main type hierarchy entry

* Remove QA Case logging again

* Add and compute additional test cases

* additional testing

* Finishing touches for reindex

* Some improvements to STARDOG.md

* Remove extra testing endpoint from concept controller

* Remove acknowledgements

* Remove classes not needed

* Remove unnecessary tests

* Put main type hierarchy back

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -155,6 +155,20 @@ superconcept=SELECT ?superclass ?superclassLabel ?superclassCode \
 } \
 ORDER by ?superclassLabel
 
+subset=SELECT ?conceptLabel ?conceptCode \
+{ \
+    GRAPH <#{namedGraph}> \
+    { \
+        ?x a owl:Class . \
+        ?x rdfs:label ?conceptLabel . \
+        ?x :NHC0 ?conceptCode . \
+        ?y a owl:AnnotationProperty . \
+        ?x ?y ?z . \
+        ?z :NHC0 "#{conceptCode}"^^xsd:string . \
+        ?y rdfs:label "Concept_In_Subset"^^xsd:string \
+    } \
+}
+
 # constructAssociationsQuery(String conceptCode, String namedGraph)
 associations=SELECT ?relationshipCode ?relationship ?relatedConceptCode ?relatedConceptLabel \
 { \
