--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1,10 +1,13 @@
-# constructClassCountsQuery(String namedGraph)
-# @deprecated
-class.counts=SELECT ( count(?class) as ?count ) {  \
-    GRAPH <#{namedGraph}> {  \
-        ?class a owl:Class  \
-  } \
-}
+# contructPrefix(String source)
+prefix.graph=PREFIX :<#{source}#> \
+PREFIX base:<#{source}>
+
+prefix.common=PREFIX owl:<http://www.w3.org/2002/07/owl#> \
+PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#> \
+PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#> \
+PREFIX xsd:<http://www.w3.org/2001/XMLSchema#> \
+PREFIX dc:<http://purl.org/dc/elements/1.1/> \
+PREFIX xml:<http://www.w3.org/2001/XMLSchema#> 
 
 # constructAllGraphNamesQuery()
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
@@ -668,6 +671,7 @@ all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 ORDER BY ?propertyLabel
 
 # distinct property values (String properytCode, String namedGraph)
+# for all concepts, regardless of status
 distinct.property.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?c a owl:Class . \
@@ -724,33 +728,32 @@ all.roles=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 ORDER BY ?propertyLabel
 
 # find all property values used for the specified axiom qualifier
+# except those values used on retired concepts
 axiom.qualifier.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
-  { ?axiom a owl:Axiom . \
-    { ?axiom :#{conceptCode} ?propertyValue } \
+  { \
+    ?a a owl:Axiom . \
+    ?c a owl:Class . \
+    ?a owl:annotatedSource ?c . \
+    ?a :#{conceptCode} ?propertyValue . \
+    filter not exists { ?c :P310 "Retired_Concept" } \
   } \
 } \
 ORDER BY ?propertyValue
 
-# concept property values
-concept.property.values=SELECT DISTINCT ?propertyValue \
+# find all property values used for the specified axiom qualifier
+# only on retired concepts
+axiom.qualifier.retired.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
-  { ?class a owl:Class . \
-    { ?class :#{conceptCode} ?propertyValue } \
+  { \
+    ?a a owl:Axiom . \
+    ?c a owl:Class . \
+    ?c :P310 "Retired_Concept" . \
+    ?a owl:annotatedSource ?c . \
+    ?a :#{conceptCode} ?propertyValue \
   } \
 } \
 ORDER BY ?propertyValue
-
-# contructPrefix(String source)
-prefix.graph=PREFIX :<#{source}#> \
-PREFIX base:<#{source}>
-
-prefix.common=PREFIX owl:<http://www.w3.org/2002/07/owl#> \
-PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#> \
-PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#> \
-PREFIX xsd:<http://www.w3.org/2001/XMLSchema#> \
-PREFIX dc:<http://purl.org/dc/elements/1.1/> \
-PREFIX xml:<http://www.w3.org/2001/XMLSchema#> 
 
 # batch queries
 
