Make the handling of retired status more explicit and config driven

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -736,7 +736,7 @@ axiom.qualifier.values=SELECT DISTINCT ?propertyValue \
     ?c a owl:Class . \
     ?a owl:annotatedSource ?c . \
     ?a :#{conceptCode} ?propertyValue . \
-    filter not exists { ?c :P310 "Retired_Concept" } \
+    filter not exists { ?c :#{conceptStatusCode} "#{retiredStatusValue}" } \
   } \
 } \
 ORDER BY ?propertyValue
