EVSRESTAPI-178: improved reindexing (#79)
* Rdfbrowser116 (#77)

* implemented but untested atm

* remove debug comments

* add test for unpublished

* Rework the reindex script

* Support the monthlydb parameter for monthly calculations, rework of reindex.sh

* Revert unindexing of qualifiers

* Finishing work on reindexing to reconcile with stardog

Co-authored-by: Peter Van Ausdeln <pvanausdeln@westcoastinformatics.com>

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -61,10 +61,12 @@ nci:
       lockFile: ${NCI_EVS_BULK_LOAD_LOCK_FILE_NAME:DownloadSuccessfull.lck}
       downloadBatchSize: ${NCI_EVS_BULK_LOAD_DOWNLOAD_BATCH_SIZE:1000}
       indexBatchSize: ${NCI_EVS_BULK_LOAD_INDEX_BATCH_SIZE:1000}
+      stardogDbs: ${STARDOG_DBS:CTRP,NCIT2}
     stardog:
       host: ${STARDOG_HOST:localhost}
       port: ${STARDOG_PORT:5820}
-      queryUrl: http://${nci.evs.stardog.host}:${nci.evs.stardog.port}/NCIT2/query
+      db: ${STARDOG_DB:NCIT2}
+      queryUrl: http://${nci.evs.stardog.host}:${nci.evs.stardog.port}/${nci.evs.stardog.db}/query
       username: admin
       password: admin
       readTimeout: 30000
