EVSRESTAPI-203: enhancements to support full NCIM load (#96)
* Update version to 1.5.0

* https://tracker.nci.nih.gov/browse/EVSRESTAPI-198

* Revert "https://tracker.nci.nih.gov/browse/EVSRESTAPI-198"

* specify title

* add version tests (#91)

* EVSRESTAPI190 (#93)

* changes for 190

* fixes one test

* format fixing

* fix labels

Co-authored-by: Brian Carlsen <bcarlsen@westcoastinformatics.com>

* EVSRESTAPI-206: improvements to return value of reindexing processes (#94)

* EVSRESTAPI-164: update NCIM loader script to support a --download mode (#95)

* Update ncim script to handle downloading NCIM zip file and unpacking it

* Finishing touches

* Handle the cleanup properly, only delete earlier versions

* Remove dir on NCIM

* EVSRESTAPI-164: Small fix to setting DOWNLOAD_DIR on dev testing

* EVSRESTAPI-164: improve ncim.sh logging

* Improve some logging to get at issue on dev indexing 21.08b

* Improve some logging to get at issue on dev indexing 21.08b

* Cleanup documentation a bit, ensure ncim indexing creates map

* NCIM refactoring and introduce MRREL data

* MAke additional choices about indexing fields to avoid ambiguity

* Some cleanup

* Enhancements for META loading, including MRREL and associated metadata

* Tuning to keep under the 10gb limit for AES on dev

* Improve logging of large content cases

* Work to reduce amount of effort to index the content by taking qualifiers out of scope

* Fix MRSAT properties to put value/source in the right places

* Slim down to get dev to build

* Cap property.value to 30k

* Finish initial work on ncim loading

Co-authored-by: Peter Van Ausdeln <pvanaus@ucdavis.edu>
Co-authored-by: Peter Van Ausdeln <pvanausdeln@westcoastinformatics.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -85,4 +85,5 @@ nci:
         host: ${ES_HOST:localhost}
         port: ${ES_PORT:9200}
         scheme: ${ES_SCHEME:http}
+      timeout: 100000
 
